tests/error/cant_find_in_nspc.gw
#! [contains] cannot find class
class C {
  class D {
    var int i;
  }
}

class E extends C {
  var C.D d;
}

class F {
  var F.D d;
}

var F f;
